--- a/.github/workflows/hello-world.yml
+++ b/.github/workflows/hello-world.yml
@@ -5,4 +5,5 @@ jobs:
         runs-on: ubuntu-latest 
         steps:
         - uses: actions/checkout@v3
-        - run: make say-hello
+        - name: Project check
+          run: make say-hello
