--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,4 +5,6 @@ jobs:
         runs-on: ubuntu-latest 
         steps:
         - uses: actions/checkout@v3
-        - run: make say-hello
+        - run: make install
+        - run: make test
+        - run: make lint
