--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,5 +6,6 @@ jobs:
         steps:
         - uses: actions/checkout@v3
         - run: make install
+        - run: make update
         - run: make test
         - run: make lint
