--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,10 +2,10 @@ name: roman-numerals-converter
 on: push
 jobs:
     build:
-        runs-on: ubuntu-latest 
+        runs-on: ubuntu-24.04
         steps:
         - uses: actions/checkout@v3
-        - run: make update
         - run: make install
+        - run: make update
         - run: make test
         - run: make lint
